# hqs-copy-trader

./: .gitignore  README.md
.claude/: settings.json
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: blacklist.py  dev.py  env_config.py  followers.py  locates.py  master.py  multipliers.py  queue.py  reconcile.py  short_sales.py  system.py  websocket.py
backend/app/engine/: __init__.py  action_queue.py  blacklist_manager.py  locate_replicator.py  multiplier_manager.py  order_replicator.py  position_tracker.py  replication_engine.py  scheduler.py  short_sale_manager.py
backend/app/models/: __init__.py  audit_log.py  blacklist.py  env_config.py  follower.py  locate_map.py  master.py  order_map.py  symbol_multiplier.py
backend/app/schemas/: __init__.py  accounts.py  blacklist.py  locates.py  multipliers.py  orders.py  reconcile.py  ws.py
backend/app/services/: audit_service.py  das_service.py  log_buffer.py  notification_service.py
docs/: DESIGN.md  on-demand-short-sale-manager.md  reconciliation-testing-plan.md  unpause-reconciliation-modal.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/blacklist/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dev/: page.tsx
frontend/src/app/env-config/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/hooks/: use-websocket.tsx
frontend/src/app/management/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/dashboard/: alerts-panel.tsx  connection-status.tsx  positions-table.tsx  reconcile-dialog.tsx  replay-dialog.tsx
frontend/src/components/layout/: sidebar.tsx  ws-provider.tsx
frontend/src/hooks/: use-websocket.tsx
frontend/src/lib/: api-client.ts  types.ts  utils.ts  ws-client.ts
frontend/src/stores/: app-store.ts
scripts/: build.py  build.sh  dev.sh
